--- a/.gitignore
+++ b/.gitignore
@@ -154,3 +154,5 @@ $RECYCLE.BIN/
 
 # Mac desktop service store files
 .DS_Store
+/aipps lab 1/aipps lab 1.VC.VC.opendb
+/aipps lab 1/aipps lab 1.VC.db
